--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!doctype html>
+<html>
+<body>
 <?php
 /*
 Twisted Destiny Text RPG
@@ -100,3 +103,5 @@ else {
 }
 require('templates/footer.php');
 ?>
+</body>
+</html>
